@@ -1,5 +1,9 @@
 2009-08-20  Christian Faulhammer  <fauli@gentoo.org>
 
+	* gentoo-syntax.el (ebuild-mode-insert-skeleton): Add new function
+	which inserts a skeleton ebuild on C-c C-n.  Code example taken
+	from exheres-mode written by Elias Pipping.
+
 	* ebuild-mode-keywords.el (ebuild-mode-keywords-python): Add
 	keywords from reworked python.eclass
 
